--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "main": "index.js",
   "repository": "git@github.com:BolajiOlajide/knex-data-access.git",
   "author": "Bolaji Olajide",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "knex": "^0.16.5",
+    "pg": "^7.10.0",
+    "sqlite3": "^4.0.6"
+  }
 }
