--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "Bolaji Olajide",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "knex": "^0.16.5",
     "pg": "^7.10.0",
+    "prettyjson": "^1.2.1",
     "sqlite3": "^4.0.6"
   }
 }
