--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "knex": "^0.16.5",
     "pg": "^7.10.0",
     "prettyjson": "^1.2.1",
-    "sqlite3": "^4.0.6"
+    "ramda": "^0.26.1",
+    "sqlite3": "^4.0.6",
+    "treeize": "^2.1.2"
   }
 }
